RESOLVED FIXED223111
Fix interpolation of perspective property
https://bugs.webkit.org/show_bug.cgi?id=223111
Summary Fix interpolation of perspective property
Antoine Quint
Reported 2021-03-11 23:13:51 PST
Fix interpolation of perspective property
Attachments
Patch (38.02 KB, patch)
2021-03-11 23:20 PST, Antoine Quint
koivisto: review+
Antoine Quint
Comment 1 2021-03-11 23:20:33 PST
Antti Koivisto
Comment 2 2021-03-11 23:45:07 PST
Comment on attachment 423018 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=423018&action=review > Source/WebCore/rendering/style/RenderStyle.h:719 > + bool hasPerspective() const { return m_rareNonInheritedData->perspective != -1; } Maybe this could compare against initialPerspective() instead of -1 to be less magical. > Source/WebCore/style/StyleBuilderConverter.h:1229 > - return 0.f; > + return -1; Similarly this could return RenderStyle::initialPerspective().
Antoine Quint
Comment 3 2021-03-12 00:40:39 PST
(In reply to Antti Koivisto from comment #2) > Comment on attachment 423018 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=423018&action=review > > > Source/WebCore/rendering/style/RenderStyle.h:719 > > + bool hasPerspective() const { return m_rareNonInheritedData->perspective != -1; } > > Maybe this could compare against initialPerspective() instead of -1 to be > less magical. > > > Source/WebCore/style/StyleBuilderConverter.h:1229 > > - return 0.f; > > + return -1; > > Similarly this could return RenderStyle::initialPerspective(). Yes, good points. Even though the initial value could be something other than "none", it's unlikely to change and it'd be more explicit than -1.
Antoine Quint
Comment 4 2021-03-12 01:19:21 PST
Radar WebKit Bug Importer
Comment 5 2021-03-12 01:20:18 PST
Note You need to log in before you can comment on or make changes to this bug.